--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="help_center">Help Center</string>
     <string name="About_us">About Us</string>
     <string name="setWallpaper">Set As Wallpaper</string>
-
+    <string name="setAsWallpaper">Select Where you want to apply the Wallpaper</string>
 
     <!-- Text For Subscription Fragment -->
 
@@ -27,12 +27,13 @@
     <string name="subscribe_text_desc">Refresh your device appearance with a diverse range
         of personalized wallpapers that add
         a touch of style to your screen.</string>
-    <string name="TC">Terms and Condition Apply. Read More...</string>
+    <string name="TC">Terms and Condition Apply. Read More…</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="both_screens">Set as Home and Lock Screen</string>
     <string name="HomeScreen">Home Screen</string>
     <string name="LockScreen">Lock Screen</string>
+    <string name="apply">Apply</string>
 
 
 </resources>
