--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="both_screens">Set as Home and Lock Screen</string>
-    <string name="HomeScreen">Home Screen</string>
-    <string name="LockScreen">Lock Screen</string>
+    <string name="HomeScreen">Set as Home Screen</string>
+    <string name="LockScreen">Set as Lock Screen</string>
     <string name="apply">Apply</string>
 
 
