--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="rate_us">Rate Us</string>
     <string name="feedback">Feedback</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="premium">Get Premium</string>
 
 
 </resources>
