--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WallpaperApp</string>
+    <string name="app_name">Wallpaper</string>
     <string name="search">Search</string>
     <string name="download">Download</string>
     <string name="me">Me</string>
