some major ui changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="help_center">Help Center</string>
     <string name="About_us">About Us</string>
     <string name="setWallpaper">Set As Wallpaper</string>
-    <string name="setAsWallpaper">Select Where you want to apply the Wallpaper</string>
+    <string name="setAsWallpaper">What would you like to do</string>
 
     <!-- Text For Subscription Fragment -->
 
