--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,10 @@
     <string name="feedback">Feedback</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="premium">Get Premium</string>
+    <string name="home">Home</string>
+    <string name="collection">Collection</string>
+    <string name="favourite">Favourite</string>
+    <string name="profile">Profile</string>
 
 
 </resources>
